--- a/templates/forms/edit_artist.html
+++ b/templates/forms/edit_artist.html
@@ -6,15 +6,15 @@
       <h3 class="form-heading">Edit artist <em>{{ artist.name }}</em></h3>
       <div class="form-group">
         <label for="name">Name</label>
-        {{ form.name(class_ = 'form-control', autofocus = true) }}
+        {{ form.name(class_ = 'form-control', autofocus = truee) }}
       </div>
       <div class="form-group">
           <label>City & State</label>
           <div class="form-inline">
-            <div class="form-group">
+            <div class="form-group" >
               {{ form.city(class_ = 'form-control', placeholder='City', autofocus = true) }}
             </div>
-            <div class="form-group">
+            <div class="form-group" >
               {{ form.state(class_ = 'form-control', placeholder='State', autofocus = true) }}
             </div>
           </div>
@@ -56,4 +56,5 @@
       <input type="submit" value="Edit Artist" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
+
 {% endblock %}
