--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<html>
 <head>
 <meta charset="utf-8">
 <title>{% block title %}{% endblock %}</title>
@@ -56,7 +56,7 @@
               {% if (request.endpoint == 'venues') or
                 (request.endpoint == 'search_venues') or
                 (request.endpoint == 'show_venue') %}
-              <form class="search" method="post" action="/venues/search">
+              <form class="search" method="get" action="/venues/search">
                 <input class="form-control"
                   type="search"
                   name="search_term"
@@ -112,7 +112,9 @@
       {% block footer %}{% endblock %}
     </div>
   </div>
+<script>
 
+</script>
   <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script type="text/javascript" src="/static/js/libs/jquery-1.11.1.min.js"><\/script>')</script>
   <script type="text/javascript" src="/static/js/libs/bootstrap-3.1.1.min.js" defer></script>
